# colour-workbench

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
colour_workbench/: __init__.py  display_measures.py  measurement_controllers.py  test_colors.py  tpg_controller.py  utilities.py
colour_workbench/ETC/: __init__.py  analysis.py  pdf.py  readme.ipynb
colour_workbench/ETC/fonts/: __init__.py
colour_workbench/ETC/fonts/Anuphan/: OFL.txt
colour_workbench/ETC_reports/: __init__.py  analysis.py  pdf.py
colour_workbench/ETC_reports/fonts/Anuphan/: README.txt
colour_workbench/scripts/: analyze_display_measurements.py  measure_display.py
notebooks/: WGM.ipynb  load_measurements_example.ipynb
